--- a/config/private_pub.yml
+++ b/config/private_pub.yml
@@ -5,7 +5,6 @@ test:
   server: "http://localhost:9292/faye"
   secret_token: "secret"
 production:
-  port: 9292
-  server: "https://52.15.207.54:9292/faye"
-  secret_token: "secret"
+  server: "http://52.15.207.54:9292/faye"
+  secret_token: ""
   signature_expiration: 3600 # one hour
