--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,67 +1,77 @@
-# Ruby CircleCI 2.0 configuration file  
-#  
-# Check https://circleci.com/docs/2.0/language-ruby/ for more details  
-#  
-version: 2  
-jobs:  
-  build:  
-   docker:  
-   # specify the version you desire here  
-   - image: circleci/ruby:2.5.3-node-browsers  
-       environment:  
-         RAILS_ENV: test   
+version: 2
+jobs:
+  build:
+    parallelism: 3
+    docker:
+      - image: circleci/ruby:2.4.2-jessie-node
+        environment:
+          BUNDLE_JOBS: 3
+          BUNDLE_RETRY: 3
+          BUNDLE_PATH: vendor/bundle
+          PGHOST: 127.0.0.1
+          PGUSER: circleci-demo-ruby
+          RAILS_ENV: test
+      - image: circleci/postgres:9.5-alpine
+        environment:
+          POSTGRES_USER: circleci-demo-ruby
+          POSTGRES_DB: rails_blog
+          POSTGRES_PASSWORD: ""
+    steps:
+      - checkout
 
-    # Specify service dependencies here if necessary  
-    # CircleCI maintains a library of pre-built images 
-    # documented at https://circleci.com/docs/2.0/circleci-images/  
-    - image: circleci/postgres:10.6  
-       environment:  
-         POSTGRES_USER: dinhduc  
+      # Which version of bundler?
+      - run:
+          name: Which bundler?
+          command: bundle -v
 
-    working_directory: ~/repo  
+      # Restore bundle cache
+      - restore_cache:
+          keys:
+            - rails-demo-bundle-v2-{{ checksum "Gemfile.lock" }}
+            - rails-demo-bundle-v2-
 
-    steps:  
-    - checkout  
+      - run:
+          name: Bundle Install
+          command: bundle check || bundle install
 
-    # Download and cache dependencies  
-    - restore_cache:  
-        keys:  
-        - v1-dependencies-{{ checksum "Gemfile.lock" }}  
-        # fallback to using the latest cache if no exact match is found  
-        - v1-dependencies-  
+      # Store bundle cache
+      - save_cache:
+          key: rails-demo-bundle-v2-{{ checksum "Gemfile.lock" }}
+          paths:
+            - vendor/bundle
 
-    - run:  
-        name: install dependencies  
-        command: |  
-          bundle install --jobs=4 --retry=3 --path vendor/bundle  
-    - save_cache:  
-        paths:  
-        - ./vendor/bundle  
-        key: v1-dependencies-{{ checksum "Gemfile.lock" }}  
+      # Only necessary if app uses webpacker or yarn in some other way
+      - restore_cache:
+          keys:
+            - rails-demo-yarn-{{ checksum "yarn.lock" }}
+            - rails-demo-yarn-
 
-    # Database setup  
-    - run:  
-        name: Set up DB  
-        command: |  
-          bundle exec rake db:create 
-          bundle exec rake db:migrate  
+      - run:
+          name: Yarn Install
+          command: yarn install --cache-folder ~/.cache/yarn
 
-    # Run rubocop  
-    - run:  
-        name: Run rubocop  
-        command: bundle exec rubocop
+      # Store yarn / webpacker cache
+      - save_cache:
+          key: rails-demo-yarn-{{ checksum "yarn.lock" }}
+          paths:
+            - ~/.cache/yarn
 
-    # Run tests!  
-    - run:  
-        name: run tests  
-        command: |  
-          mkdir /tmp/test-results 
-          TEST_FILES="$(circleci tests glob 'spec/**/*_spec.rb' | circleci tests split --split-by=timings)"  
-          bundle exec rspec --format progress \ --format RspecJunitFormatter \ --out /tmp/test-results/rspec.xml \ --format progress \ $TEST_FILES  
-    # collect reports  
-    - store_test_results:  
-        path: /tmp/test-results  
+      - run:
+          name: Wait for DB
+          command: dockerize -wait tcp://localhost:5432 -timeout 1m
 
-    - store_artifacts:  
-        path: /tmp/test-results  
-        destination: test-results
+      - run:
+          name: Database setup
+          command: bin/rails db:schema:load --trace
+
+      # Run rspec in parallel
+      - run:
+          name: Run rspec in parallel
+          command: |
+            bundle exec rspec --profile 10 \
+                              --format RspecJunitFormatter \
+                              --out test_results/rspec.xml \
+                              --format progress \
+                              $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
+      # Save test results for timing analysis
+      - store_test_results:
