--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,6 +72,6 @@ jobs:
                               --format RspecJunitFormatter \
                               --out test_results/rspec.xml \
                               --format progress \
-                              $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
-      # Save test results for timing analysis
+           # Save test results for timing analysis
       - store_test_results:
+          path: test_results
